changed mongolab info

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,2 +1,2 @@
 production:
-  uri: mongodb://heroku_app3352428:vc2g99fuklqvumqmg6kjk7prvg@ds031107.mongolab.com:31107/heroku_app3352428
+  uri: mongodb://haikuduel:l0l!f4rtz@ds031587.mongolab.com:31587/haikudeul
